# zinnia

./: .editorconfig  .prettierignore  .prettierrc.yaml  Cargo.toml  Cross.toml  README.md
.cargo/: audit.toml  config.toml
.github/: dependabot.yaml
.github/workflows/: cargo-audit.yml  ci.yaml  dependabot-validation.yml  release.yml
cli/: Cargo.toml  README.md  args.rs  main.rs  runtime.rs  utils.rs
cli/runtime_js/: 98_global_scope.js  99_main.js
cli/tests/: cli_tests.rs
cross/: Dockerfile
daemon/: Cargo.toml  README.md  args.rs  main.rs  state.rs  station_reporter.rs
daemon/tests/: daemon_tests.rs
daemon/tests/fixtures/: fetch-ipfs-with-delay.js
docs/: building-modules.md  release.md
docs/architecture-decision-records/: 2023-01-initial-architecture.md  2023-01-switching-to-deno-core.md  2023-03-filesystem-conventions.md  2023-03-integration-with-station.md  template.md
examples/ping-probe/: README.md  probe.js
ext/libp2p/: Cargo.toml  README.md  lib.rs  peer.rs
ext/libp2p/js/: 01_peer.js
ext/libp2p/peer/: behaviour.rs  config.rs  handler.rs  protocol.rs
runtime/: Cargo.toml  README.md  console_reporter.rs  ext.rs  lib.rs  module_loader.rs  reporter.rs  runtime.rs  vendor.js  vendored.rs
runtime/js/: 06_util.js  90_zinnia_apis.js  98_global_scope.js  99_main.js  fetch.js  internals.js  test.js
runtime/tests/: fetch_api_tests.rs  runtime_integration_tests.rs
runtime/tests/helpers/: mod.rs
runtime/tests/integration/: globals_tests.rs  mod.rs  timers_tests.rs
runtime/tests/js/: empty_module.js  fetch_tests.js  globals_tests.js  helpers.js  ipfs_retrieval_tests.js  libp2p_tests.js  module_loader_tests.js  station_apis_tests.activity.txt  station_apis_tests.js  station_reporting_tests.js  timers_tests.js  versions_tests.js  webapis_tests.js  webcrypto_tests.js
runtime/tests/js/module_fixtures/: lib.js  log.js  static_import_from_outside_of_module_dir.js
runtime/tests/js/test_runner_tests/: failing_tests.activity.txt  failing_tests.js  passing_tests.activity.txt  passing_tests.js
