[workspace]
resolver = "2"
members = [
    "ext/libp2p",

    "runtime",
    "cli",
    "daemon",
]

[workspace.package]
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["Protocol Labs"]
repository = "https://github.com/filecoin-station/zinnia"

[workspace.dependencies]
assert_cmd = "2.0.13"
assert_fs = "1.1.0"
console_static_text = "=0.8.1"
deno_core = "0.232.0"
log = "0.4.20"
pretty_assertions = "1.4.0"
env_logger = "0.10.1"
serde = "1.0.195"
serde_repr = "0.1.18"
tokio = { version = "1.35.1", features = ["fs", "rt", "macros"] }

# workspace-local
zinnia_runtime = { version = "0.16.0", path = "./runtime" }
zinnia_libp2p = { version = "0.16.0", path = "./ext/libp2p" }

[profile.release]
codegen-units = 1
# LTO is broken on Windows, see https://github.com/rust-lang/rust/issues/107781
# lto = true
# Optimize for size, otherwise the Windows linker fails the build
opt-level = "z"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace.lints.rust]
warnings="deny"

[workspace.lints.clippy]
type_complexity="allow"
pedantic="allow"
