[workspace]
resolver = "2"
members = [
    "ext/libp2p",

    "runtime",
    "cli",
    "daemon",
]

[workspace.package]
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["Protocol Labs"]
repository = "https://github.com/filecoin-station/zinnia"

[workspace.dependencies]
assert_cmd = "2.0.16"
assert_fs = "1.1.2"
console_static_text = "=0.8.1"
deno_core = "0.232.0"
log = "0.4.26"
pretty_assertions = "1.4.1"
env_logger = "0.10.2"
serde = "1.0.218"
serde_repr = "0.1.19"
tokio = { version = "1.43.0", features = ["fs", "rt", "macros"] }

# workspace-local
zinnia_runtime = { version = "0.20.3", path = "./runtime" }
zinnia_libp2p = { version = "0.20.3", path = "./ext/libp2p" }

[profile.release]
codegen-units = 1
# LTO is broken on Windows, see https://github.com/rust-lang/rust/issues/107781
# lto = true
# Optimize for size, otherwise the Windows linker fails the build
opt-level = "z"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace.lints.rust]
warnings="deny"

[workspace.lints.clippy]
type_complexity="allow"
pedantic="allow"
