[package]
name = "zinnia"
version = "0.4.0"
authors.workspace = true
default-run = "zinnia"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Zinnia is a runtime for Filecoin Station modules. It provides a sandboxed environment to execute untrusted code on consumer-grade computers."
categories = ["command-line-utilities", "development-tools", "wasm"]

[[bin]]
name = "zinnia"
path = "main.rs"
doc = false

[dependencies]
clap = { version = "4.1.11", features = ["derive"] }
env_logger.workspace = true
log.workspace = true
tokio = { workspace = true }
zinnia_runtime = { workspace = true }

[dev-dependencies]
assert_cmd = "2.0.10"
assert_fs = { workspace = true }
pretty_assertions = { workspace = true }

[package.metadata.winres]
# This section defines the metadata that appears in the deno.exe PE header.
OriginalFilename = "zinnia.exe"
LegalCopyright = "© Protocol Labs & Zinnia contributors. Permissive License Stack (Apache-2.0 or MIT)."
ProductName = "Filecoin Station"
FileDescription = "Zinnia: Secure sandboxed runtime for Filecoin Station modules."

