[package]
name = "zinniad"
version = "0.18.3"
authors.workspace = true
default-run = "zinniad"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Zinnia daemon runs Zinnia modules inside Filecoin Station."

[[bin]]
name = "zinniad"
path = "main.rs"
doc = false

[dependencies]
atomicwrites = "0.4.3"
clap = { version = "4.5.4", features = ["derive", "env"] }
env_logger.workspace = true
log.workspace = true
regex = "1.10.4"
serde.workspace = true
serde_json = "1.0.116"
tokio = { workspace = true }
zinnia_runtime = { workspace = true }

[dev-dependencies]
assert_cmd = { workspace = true }
assert_fs = { workspace = true }
pretty_assertions = { workspace = true }
tempfile = "3.10.1"

[lints]
workspace = true
