[package]
name = "zinnia_runtime"
version = "0.17.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Zinnia is a runtime for Filecoin Station modules. This crate provides the runtime including all platform APIs."

[lib]
name = "zinnia_runtime"
path = "lib.rs"

[dependencies]
console_static_text.workspace = true
chrono = { version= "0.4.33", default-features = false, features = [ "clock", "std" ] }
deno_console = "0.127.0"
deno_core.workspace = true
deno_crypto = "0.141.0"
deno_fetch = "0.151.0"
deno_url = "0.127.0"
deno_web = "0.158.0"
deno_webidl = "0.127.0"
lassie = "0.9.0"
# lassie = { git = "https://github.com/filecoin-station/rusty-lassie.git" }
log.workspace = true
once_cell = "1.19.0"
serde.workspace = true
serde_repr.workspace = true
termcolor = "1.4.1"
tokio = { workspace = true, features = ["fs"] }
zinnia_libp2p.workspace = true

[dev-dependencies]
assert_fs = { workspace = true }
console_static_text = "0.8.1"
env_logger.workspace = true
pretty_assertions = { workspace = true }
regex = "1.10.3"

[lints]
workspace = true
