[package]
name = "zinnia_runtime"
version = "0.20.3"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Zinnia is a runtime for Filecoin Station modules. This crate provides the runtime including all platform APIs."

[lib]
name = "zinnia_runtime"
path = "lib.rs"

[dependencies]
console_static_text.workspace = true
chrono = { version= "0.4.39", default-features = false, features = [ "clock", "std" ] }
deno_console = "0.129.0"
deno_core.workspace = true
deno_crypto = "0.143.0"
deno_fetch = "0.153.0"
deno_url = "0.129.0"
deno_web = "0.160.0"
deno_webidl = "0.129.0"
lassie = "0.9.0"
# lassie = { git = "https://github.com/filecoin-station/rusty-lassie.git" }
log.workspace = true
once_cell = "1.20.3"
regex = "1.11.1"
serde.workspace = true
serde_repr.workspace = true
termcolor = "1.4.1"
tokio = { workspace = true, features = ["fs"] }
zinnia_libp2p.workspace = true

[dev-dependencies]
assert_fs = { workspace = true }
console_static_text = "0.8.1"
env_logger.workspace = true
pretty_assertions = { workspace = true }

[lints]
workspace = true
