[package]
name = "zinnia_libp2p"
version = "0.20.3"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "A libp2p extension for Zinnia. This crate provides JS APIs wrapping rust-libp2p. It should be compatible with any engine building on top of deno_core."

[lib]
name = "zinnia_libp2p"
path = "lib.rs"

[dependencies]
async-trait = "0.1.86"
deno_core.workspace = true
log.workspace = true
smallvec = "1.14.0"
tokio = { workspace = true, features = ["rt", "macros", "sync", "time"] }
tokio-util = "0.7.13"
either = "1.14.0"

[dependencies.libp2p]
version = "0.51.4"
features = [
    # "async-std",
    # "autonat",
    # "dcutr",
    # "deflate",
    "dns",
    # "ecdsa",
    "ed25519",
    # "floodsub",
    # "gossipsub",
    "identify",
    # "kad",
    # "mdns",
    # "metrics",
    "mplex",
    "noise",
    "ping",
    # "plaintext",
    # "pnet",
    # "quic",
    "macros",
    # "relay",
    # "rendezvous",
    "request-response",
    "rsa",
    # "secp256k1",
    "serde",
    "tcp",
    # "tls",
    "tokio",
    # "uds",
    # "wasm-bindgen",
    # "wasm-ext",
    # "wasm-ext-websocket",
    # "webrtc",
    # "websocket",
    "yamux",
]

[dev-dependencies]
env_logger.workspace = true
rand = "0.8.5"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lints]
workspace = true
